examples/bench/bad/typing/unbound3.mlw

parameter f : unit -> {} unit raises E {}
